fix(company data): PM2-2124 company data records not visible after 200 records (#400)

--- a/src/components/shared/cfx/PageLoadingTable/styles.scss
+++ b/src/components/shared/cfx/PageLoadingTable/styles.scss
@@ -25,6 +25,7 @@ $tableHeight: 500px;
       display: flex;
       justify-content: center;
       align-items: center;
+      background: none !important;
     }
 
     &--variant {
@@ -108,6 +109,12 @@ $tableHeight: 500px;
           background: rgba(77, 77, 77, 0.5) !important;
         }
       }
+    }
+  }
+
+  &__no-footer {
+    .MuiDataGrid-footerContainer {
+      display: none !important;
     }
   }
 }
